<resources>
    <string name="app_name">Tubes Covid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_barchart">Bar Chart</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_dataglobal">Data Global</string>
    <string name="menu_dataindonesia">Data Global | Indonesia</string>
    <string name="menu_dataindonesiprov">Data Indonesia Provinsi</string>
    <string name="menu_dataindonesi">Data Global Sembuh</string>
    <string name="menu_dataglobalpos">Data Global Positif</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_covid_19">Data Covid-19</string>
    <string name="total_positif">TOTAL POSITIF</string>
    <string name="nol">nol</string>
    <string name="orang">orang</string>
    <string name="total_meninggal">TOTAL MENINGGAL</string>
    <string name="indonesia">INDONESIA</string>
    <string name="positif">POSITIF</string>
    <string name="sembuh">SEMBUH</string>
    <string name="meniggal">MENIGGAL</string>
    <string name="active">Active :</string>
    <string name="cari_negara">Cari Negara</string>
    <string name="cari_provinsi">Cari Provinsi</string>
    <string name="negara">Negara :</string>
    <string name="confirmed">Confirmed</string>
    <string name="konfirmasi">KONFIRMASI</string>
    <string name="provinsi">Provinsi :</string>
    <string name="data_global">Data Global</string>
    <string name="data_global_indonesia">Data Global | Indonesia</string>
    <string name="data_indonesia_provinsi">Data Indonesia Provinsi</string>
    <string name="grafik_data">Grafik Data</string>
</resources>
