<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/coronaGlobal"
            android:title="@string/data_global"
            android:contentDescription="@string/data_global"/>
        <item
            android:id="@+id/globalindo"
            android:title="@string/data_global_indonesia"
            android:contentDescription="@string/data_global_indonesia"/>
        <item
            android:id="@+id/coronaindoprov"
            android:title="@string/data_indonesia_provinsi"
            android:contentDescription="@string/data_global_indonesia"/>
    </group>
</menu>