<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity=""
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/negara"
                android:contentDescription="@string/negara"
                android:textSize="16sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/negara"
                android:text="@string/indonesia"
                android:contentDescription="@string/indonesia"
                android:textSize="16sp"
                android:gravity="end"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/active"
                android:contentDescription="@string/active"
                android:textSize="16sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/active"
                android:text="0"
                android:textSize="16sp"
                android:gravity="end"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/positif"/>

            <TextView
                android:text="@string/konfirmasi"
                android:contentDescription="@string/konfirmasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/Confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/meninggal"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/meniggal"
                android:text="@string/meniggal"/>

            <TextView
                android:padding="10dp"
                android:gravity="end"
                android:id="@+id/Deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/sembuh"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sembuh"/>

            <TextView
                android:padding="10dp"
                android:gravity="end"
                android:id="@+id/Recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>