<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/provinsi"
                    android:text="@string/provinsi"/>

                <TextView
                    android:id="@+id/prov"
                    android:textSize="16sp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jawa Barat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/active"
                    android:text="@string/active"/>

                <TextView
                    android:id="@+id/active"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/positif"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/positif"
                android:text="@string/positif"/>

            <TextView
                android:padding="10dp"
                android:gravity="end"
                android:id="@+id/Confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/meninggal"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/meniggal"
                android:text="@string/meniggal"/>

            <TextView
                android:padding="10dp"
                android:gravity="end"
                android:id="@+id/Deaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/sembuh"/>

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sembuh"
                android:text="@string/sembuh"/>

            <TextView
                android:padding="10dp"
                android:gravity="end"
                android:id="@+id/Recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>